--- a/css/mainWindow.css
+++ b/css/mainWindow.css
@@ -1,6 +1,6 @@
 main {
-    background-image:  linear-gradient(120deg, red, orange, yellow, green, blue, navy, purple);
-  }.fullscreen {
+  background-color: aqua;
+}.fullscreen {
     width: fit-content;
     height: fit-content;
     background-color: lightblue;
@@ -13,7 +13,7 @@ main {
     gap: 10px; /* 자식요소간의 간격 */
   }
   .temp-box {
-    background-image: linear-gradient(90deg, red, orange, yellow, green, blue, navy, purple);
+    background-color: cyan;
     width: fit-content;
     height: 100%;
     font-size: 40px;
